@@ -13,6 +13,7 @@ jalv (1.6.7) unstable; urgency=medium
   * Fix memory leaks
   * Fix outdated man pages
   * Fix spurious transport messages
+  * Fix thread-safety of plugin/UI communication rings
   * Flush stdout after printing control values in console interface
   * Print status information consistently to stdout
   * Propagate worker errors to the scheduler when possible
@@ -20,7 +21,7 @@ jalv (1.6.7) unstable; urgency=medium
   * Remove Qt4 support
   * Switch to meson build system
 
- -- David Robillard <d@drobilla.net>  Wed, 10 Aug 2022 16:51:40 +0000
+ -- David Robillard <d@drobilla.net>  Wed, 10 Aug 2022 17:04:22 +0000
 
 jalv (1.6.6) stable; urgency=medium
 
